<package format="3">
  <name>flir_lepton_image_processing</name>
  <version>0.1.0</version>
  <description>Contains thermal ROI detection node using Flir-Lepton sensor.</description>

  <maintainer email="aggelostriadafillidis@gmail.com">Angelos Triantafyllidis</maintainer>

  <license>BSD</license>

  <author email="aggelostriadafillidis@gmail.com">Angelos Triantafyllidis</author>
  <author email="aphilotheou@gmail.com">Alexandros Philotheou</author>
  <author email="mtsardoulias@gmail.com">Manos Tsardoulias</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Convert ROS 1 build and test dependencies to their ROS 2 equivalents -->
  <build_depend>ament_lint_auto</build_depend>  <!-- Replaces roslint for ROS 2 -->
  <build_depend>ament_lint_common</build_depend>  <!-- Additional common linters -->

  <depend>rclcpp</depend>  <!-- Replaces roscpp -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>  <!-- Uncommented since you might still need it in ROS 2 -->
  <depend>dynamic_reconfigure</depend>  <!-- You will need to adjust this for ROS 2, see below -->
  <depend>flir_lepton_msgs</depend>

  <!-- ROS 2 uses different test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>  <!-- For Python tests -->

</package>
