<package format="3">
  <name>flir_lepton_msgs</name>
  <version>0.0.1</version>
  <description>Flir Lepton ROS communications</description>

  <maintainer email="klpanagi@gmail.com">Konstantinos Panayiotou</maintainer>

  <license>BSD</license>

  <author email="klpanagi@gmail.com">Konstantinos Panayiotou</author>
  <author email="aggelostriadafillidis@gmail.com">Angelos Triantafyllidis</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <member name="rosidl_cmake_args">
    <string>-DCONFIG_ROSIDL_VALIDATE_ALL=OFF</string>
  </member>
  
  <!-- ROS 2 message and service generation dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
