<package format="3">
  <name>flir_lepton_sensor</name>
  <version>0.0.1</version>
  <description>This package contains sources for communicating with the Flir Lepton LWIR sensor</description>

  <maintainer email="klpanagi@gmail.com">Konstantinos Panayiotou</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/klpanagi/rpi_hardware_interface/issues</url>
  <url type="repository">https://github.com/klpanagi/rpi_hardware_interface.git</url>
  <author email="klpanagi@gmail.com">Konstantinos Panayiotou</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- If flir_lepton_msgs are custom messages, they need to be ported to ROS 2 as well -->
  <depend>flir_lepton_msgs</depend>

  <!-- If there are other dependencies specific to your package, they should be listed here -->
  <!-- Example: ament_index_cpp for using the ament index library -->
</package>
